syntax = "proto3";

package plugincrawlerpb;

// UpdCrawlerCommand - updcrawler
message UpdCrawlerCommand {
}

// ExpArticleCommand - export article
message ExpArticleCommand {
    // URL - url
    string URL = 1;
    // PDF - pdf filename
    string PDF = 2;
}

// GetArticlesCommand - get articles
message GetArticlesCommand {
    // URL - url
    string URL = 1 [deprecated = true];
    // attachJQuery - attach jquery
    bool attachJQuery = 2 [deprecated = true];
    // website - website
    string website = 3;
}

// SubscribeArticlesCommand - subscribe articles
message SubscribeArticlesCommand {
    // website - website
    repeated string websites = 1;
    // timer - timer
    int32 timer = 2;
}

// URLCommand - url
message URLCommand {
}